<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_add_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_country_tip"
        android:singleLine="true"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_add_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_company_tip"
        android:singleLine="true"
        android:textSize="15sp" />

    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_url_tip"
        android:textColor="@color/Grey_900"/>

    <EditText
        android:id="@+id/et_add_domain_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_domain_url_tip"
        android:singleLine="true"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_add_ip_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_ip_url_tip"
        android:singleLine="true"
        android:textSize="15sp" />
</LinearLayout>