<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_server_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/update_server"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_countryname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="countryName"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="www.google.com"
                    android:textColor="@color/Grey_900"
                    android:textSize="13sp" />

            </LinearLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_download_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/download_setting"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_other_func"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/reboot_setting"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_reboot_active"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:text="@string/close"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_install_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/log_manager"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_language"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/language_setting"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_version"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/version"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />
    </LinearLayout>

    <!--<RelativeLayout-->
    <!--android:id="@+id/contentFrame"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->
</FrameLayout>