<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_reboot_switch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/reboot_switch_tip"
            android:textSize="16sp" />

        <com.nexgo.xtms.view.widget.SwitchButton
            android:id="@+id/sb_reboot_switch"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            app:sb_checked="false"
            app:sb_show_indicator="false" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey_800" />

    <LinearLayout
        android:id="@+id/ll_reboot_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_time_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/time_setting"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_reboot_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:text="@string/not_set"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

        <RelativeLayout
            android:id="@+id/rl_day_circulate_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/day_circulate_setting"
                android:textSize="16sp" />

            <com.nexgo.xtms.view.widget.SwitchButton
                android:id="@+id/sb_day_circulate"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                app:sb_checked="false"
                app:sb_show_indicator="false" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_800" />

    </LinearLayout>


</LinearLayout>